log
vi., 18 de mar. de 2022 15:11:42: 
 list.c | 42 +++++++++++++++++++++++++++++++++++++-----
 1 file changed, 37 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:78:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
76b716b
vi., 18 de mar. de 2022 15:12:25: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  9|3
total_score: 35/70
8a267fe
vi., 18 de mar. de 2022 15:14:58: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:78:5: error: 'nuevo' undeclared (first use in this function)
     nuevo = createNode(data);
     ^~~~~
list.c:78:5: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
50fde04
